# ZPE-Taste

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLICATION_BOUNDARY_REPORT.md  PUBLIC_AUDIT_LIMITS.md  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  LEGAL_BOUNDARIES.md  README.md  SCOPE.md  SUPPORT.md
docs/_reorientation/2026-04-17/: NOVELTY_CARD.md
proofs/artifacts/: taste_negative_reference.json
proofs/manifests/: CURRENT_REFERENCE_PACKET.md
src/zpe_taste/: __init__.py  reference.py  verify.py
tests/: test_public_surface.py  test_reference_packet.py
validation/results/: reference_validation.json
