[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-taste"
version = "0.1.0"
description = "Evidenced negative reference package for the current taste lane object."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Zer0pa-SAL-6.2"
authors = [
  { name = "Zer0pa" },
]
keywords = ["taste", "negative result", "reference", "geometry"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Zer0pa/zpe-taste"
Repository = "https://github.com/Zer0pa/zpe-taste"
Issues = "https://github.com/Zer0pa/zpe-taste/issues"

[project.scripts]
zpe-taste-verify = "zpe_taste.verify:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
