[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-taste"
version = "0.1.0"
description = "Evidenced negative reference package for the current taste lane object."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Zer0pa-SAL-7.0" }
authors = [
  { name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai" },
]
keywords = ["taste", "taste-lane", "negative-reference", "geometry-evaluation", "scientific-audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Taste"
Documentation = "https://github.com/Zer0pa/ZPE-Taste/blob/main/README.md"
Repository = "https://github.com/Zer0pa/ZPE-Taste"
Issues = "https://github.com/Zer0pa/ZPE-Taste/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Taste/blob/main/CHANGELOG.md"

[project.scripts]
zpe-taste-verify = "zpe_taste.verify:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
